@@ -20,6 +20,7 @@
 - fix fix master map type check.
 - init qdn before use in get_query_dn().
 - fix typo in update_hosts_mounts().
+- make negative cache update consistent for all lookup modules.
 
 28/03/2014 autofs-5.0.9
 =======================
